--- a/.eslintrc
+++ b/.eslintrc
@@ -15,11 +15,7 @@
   ],
   "rules": {
     "no-console": "error",
-    "complexity": ["warn", 15],
-    "no-unused-vars": ["warn", {
-      "argsIgnorePattern": "^_",
-      "varsIgnorePattern": "^_"
-    }],
+    "no-unused-vars": "off",
     "@typescript-eslint/no-unused-vars": ["warn", {
       "argsIgnorePattern": "^_",
       "varsIgnorePattern": "^_"
