--- a/package.json
+++ b/package.json
@@ -63,8 +63,8 @@
     "pane-registry": "^2.4.2",
     "path-browserify": "^1.0.1",
     "postcss-flexbugs-fixes": "^5.0.2",
-    "rdflib": "^2.2.6",
-    "solid-logic": "^1.3.6",
+    "rdflib": "^2.2.7",
+    "solid-logic": "^1.3.7-alpha",
     "solid-namespace": "^0.5.1",
     "stream-browserify": "^3.0.0",
     "uuid": "^8.3.2"
