--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "solid-ui",
-  "version": "2.4.9-beta",
+  "version": "2.4.9",
   "description": "UI library for writing Solid read-write-web applications",
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
@@ -64,7 +64,7 @@
     "path-browserify": "^1.0.1",
     "postcss-flexbugs-fixes": "^5.0.2",
     "rdflib": "^2.2.7",
-    "solid-logic": "^1.3.7-alpha",
+    "solid-logic": "^1.3.7",
     "solid-namespace": "^0.5.1",
     "stream-browserify": "^3.0.0",
     "uuid": "^8.3.2"
@@ -78,21 +78,21 @@
     "@babel/plugin-transform-runtime": "^7.15.8",
     "@babel/preset-env": "^7.15.8",
     "@babel/preset-typescript": "^7.15.0",
-    "@storybook/addon-actions": "^6.3.11",
-    "@storybook/addon-essentials": "^6.3.11",
-    "@storybook/addon-links": "^6.3.11",
-    "@storybook/html": "^6.3.11",
-    "@testing-library/dom": "^8.7.2",
+    "@storybook/addon-actions": "^6.3.12",
+    "@storybook/addon-essentials": "^6.3.12",
+    "@storybook/addon-links": "^6.3.12",
+    "@storybook/html": "^6.3.12",
+    "@testing-library/dom": "^8.9.0",
     "@testing-library/user-event": "^13.3.0",
     "@types/jest": "^27.0.2",
     "@types/jsdom": "^16.2.13",
-    "@types/node": "^16.10.5",
+    "@types/node": "^16.10.9",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "autoprefixer": "^10.3.7",
     "babel-loader": "^8.2.2",
     "eslint": "^7.32.0",
-    "eslint-plugin-jest": "^25.0.5",
+    "eslint-plugin-jest": "^25.0.6",
     "husky": "^7.0.2",
     "jest": "^27.2.5",
     "jsdom": "^18.0.0",
