--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "babel-loader": "^8.2.3",
     "eslint": "^7.32.0",
     "eslint-plugin-jest": "^25.3.0",
+    "eslint-import-resolver-typescript": "^2.5.0",
     "husky": "^7.0.4",
     "jest": "^27.4.5",
     "jsdom": "^19.0.0",
