--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
     "pane-registry": "^2.4.5",
     "path-browserify": "^1.0.1",
     "postcss-flexbugs-fixes": "^5.0.2",
-    "rdflib": "^2.2.15",
+    "rdflib": "^2.2.15-bbf45639",
     "solid-logic": "^1.3.12",
     "solid-namespace": "^0.5.2",
     "stream-browserify": "^3.0.0",
@@ -92,8 +92,8 @@
     "autoprefixer": "^10.4.0",
     "babel-loader": "^8.2.3",
     "eslint": "^7.32.0",
-    "eslint-plugin-jest": "^25.3.0",
     "eslint-import-resolver-typescript": "^2.5.0",
+    "eslint-plugin-jest": "^25.3.0",
     "husky": "^7.0.4",
     "jest": "^27.4.5",
     "jsdom": "^19.0.0",
