--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "solid-ui",
-  "version": "2.4.14",
+  "version": "2.4.14-bbf45639",
   "description": "UI library for writing Solid read-write-web applications",
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
@@ -60,11 +60,11 @@
     "jss": "^10.9.0",
     "jss-preset-default": "^10.9.0",
     "mime-types": "^2.1.34",
-    "pane-registry": "^2.4.5",
+    "pane-registry": "^2.4.6",
     "path-browserify": "^1.0.1",
     "postcss-flexbugs-fixes": "^5.0.2",
-    "rdflib": "^2.2.15",
-    "solid-logic": "^1.3.12",
+    "rdflib": "^2.2.17",
+    "solid-logic": "^1.3.13",
     "solid-namespace": "^0.5.2",
     "stream-browserify": "^3.0.0",
     "uuid": "^8.3.2"
@@ -92,8 +92,8 @@
     "autoprefixer": "^10.4.0",
     "babel-loader": "^8.2.3",
     "eslint": "^7.32.0",
-    "eslint-plugin-jest": "^25.3.0",
     "eslint-import-resolver-typescript": "^2.5.0",
+    "eslint-plugin-jest": "^25.3.0",
     "husky": "^7.0.4",
     "jest": "^27.4.5",
     "jsdom": "^19.0.0",
