--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "path-browserify": "^1.0.1",
     "postcss-flexbugs-fixes": "^5.0.2",
     "rdflib": "^2.2.17",
-    "solid-logic": "github:solid/solid-logic#tryMoveAuth",
+    "solid-logic": "^1.3.13-2e3e7417",
     "solid-namespace": "^0.5.2",
     "stream-browserify": "^3.0.0",
     "uuid": "^8.3.2"
