--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,20 +3,21 @@ name: CI
 on:
   push:
     branches:
-      - main
+      - "**"
   pull_request:
     branches:
-      - main
+      - "**"  
+  workflow_dispatch:
 
 jobs:
-  test:
+  build:
     runs-on: ubuntu-latest
     strategy:
       matrix:
         node-version:
           - 12.x
           - 14.x
-          - 15.x
+          - 16.x
     steps:
       - uses: actions/checkout@v2
       - name: Use Node.js ${{ matrix.node-version }}
@@ -26,6 +27,7 @@ jobs:
       - run: npm ci
       - run: npm test
       - run: npm run doc
+      - run: npm run build
       - name: Save build
         if: matrix.node-version == '14.x'
         uses: actions/upload-artifact@v2
@@ -37,7 +39,7 @@ jobs:
           retention-days: 1
 
   gh-pages:
-    needs: test
+    needs: build
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main'
     steps:
@@ -51,7 +53,7 @@ jobs:
           publish_dir: .
 
   npm-publish-build:
-    needs: test
+    needs: build
     runs-on: ubuntu-latest
     steps:
       - uses: actions/download-artifact@v2
@@ -69,8 +71,9 @@ jobs:
         with:
           token: ${{ secrets.NPM_TOKEN }}
           tag: ${{ env.GITHUB_REF_SLUG }}
+  
   npm-publish-latest:
-    needs: test
+    needs: build
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main'
     steps:
