--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "jss": "^10.9.0",
     "jss-preset-default": "^10.9.0",
     "mime-types": "^2.1.34",
-    "pane-registry": "^2.4.6",
+    "pane-registry": "^2.4.6-d45208e6",
     "path-browserify": "^1.0.1",
     "postcss-flexbugs-fixes": "^5.0.2",
     "rdflib": "^2.2.17",
