--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "lint-fix": "eslint \"src/**/*.js\" \"src/**/*.ts\" --fix",
     "jest": "jest",
     "test:debug": "node --inspect-brk ./node_modules/jest/bin/jest.js --runInBand --watch",
-    "test": "npm run lint && npm run jest",
+    "test": "npm run build-version && npm run lint && npm run jest",
     "doc": "typedoc --out ./Documentation/api/ ./src/ --excludeInternal",
     "prepublishOnly": "npm test && npm run build",
     "postpublish": "git push origin main --follow-tags",
