--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "mime-types": "^2.1.35",
     "pane-registry": "^2.4.8",
     "rdflib": "^2.2.19",
-    "solid-logic": "^1.3.15",
+    "solid-logic": "^1.3.15-41ec298b",
     "solid-namespace": "^0.5.2",
     "uuid": "^8.3.2"
   },
