--- a/package.json
+++ b/package.json
@@ -75,8 +75,9 @@
     "@babel/preset-typescript": "^7.16.7",
     "@babel/runtime": "^7.17.8",
     "@mdx-js/react": "^2.1.1",
-    "@storybook/addon-docs": "^6.4.19",
-    "@storybook/addon-essentials": "^6.4.19",
+    "@storybook/addon-actions": "6.4.19",
+    "@storybook/addon-docs": "6.4.19",
+    "@storybook/addon-essentials": "6.4.19",
     "@storybook/addon-links": "^6.4.19",
     "@storybook/builder-webpack5": "^6.4.19",
     "@storybook/html": "^6.4.19",
@@ -107,6 +108,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-is": "^17.0.2",
+    "test-usehooks-ts": "^3.0.0-beta",
     "ts-jest": "^27.1.4",
     "typedoc": "^0.22.13",
     "typescript": "^4.6.3",
