--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "mime-types": "^2.1.35",
     "pane-registry": "^2.4.7",
     "rdflib": "^2.2.18",
-    "solid-logic": "^1.3.14",
+    "solid-logic": "1.3.17-d95df8aa",
     "solid-namespace": "^0.5.2",
     "uuid": "^8.3.2"
   },
