--- a/package.json
+++ b/package.json
@@ -56,12 +56,14 @@
   "dependencies": {
     "escape-html": "^1.0.3",
     "eslint-plugin-n": "^15.2.2",
+    "i": "^0.3.7",
     "jss": "^10.9.0",
     "jss-preset-default": "^10.9.0",
     "mime-types": "^2.1.35",
+    "npm": "^8.13.2",
     "pane-registry": "^2.4.10",
     "rdflib": "^2.2.19",
-    "solid-logic": "1.3.17-d95df8aa",
+    "solid-logic": "1.3.17-fca5749b",
     "solid-namespace": "^0.5.2",
     "uuid": "^8.3.2"
   },
