--- a/package.json
+++ b/package.json
@@ -61,9 +61,9 @@
     "jss-preset-default": "^10.9.0",
     "mime-types": "^2.1.35",
     "npm": "^8.13.2",
-    "pane-registry": "^2.4.10",
+    "pane-registry": "2.4.10-e0d1abde",
     "rdflib": "^2.2.19",
-    "solid-logic": "1.3.17-fca5749b",
+    "solid-logic": "1.3.17-af110ecf",
     "solid-namespace": "^0.5.2",
     "uuid": "^8.3.2"
   },
