--- a/package.json
+++ b/package.json
@@ -55,65 +55,65 @@
   "homepage": "https://github.com/solidos/solid-ui",
   "dependencies": {
     "escape-html": "^1.0.3",
-    "eslint-plugin-n": "^15.2.2",
+    "eslint-plugin-n": "^15.2.5",
     "i": "^0.3.7",
-    "jss": "^10.9.0",
-    "jss-preset-default": "^10.9.0",
+    "jss": "^10.9.2",
+    "jss-preset-default": "^10.9.2",
     "mime-types": "^2.1.35",
     "npm": "^8.13.2",
-    "pane-registry": "2.4.10-e0d1abde",
+    "pane-registry": "^2.4.10-e0d1abde",
     "rdflib": "^2.2.19",
-    "solid-logic": "1.3.17-af110ecf",
+    "solid-logic": "^1.3.17-af110ecf",
     "solid-namespace": "^0.5.2",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "@babel/cli": "^7.17.6",
-    "@babel/core": "^7.17.8",
+    "@babel/cli": "^7.17.10",
+    "@babel/core": "^7.17.12",
     "@babel/plugin-proposal-class-properties": "^7.16.7",
     "@babel/plugin-proposal-optional-chaining": "^7.16.7",
     "@babel/plugin-transform-async-to-generator": "^7.16.8",
-    "@babel/plugin-transform-runtime": "^7.17.0",
+    "@babel/plugin-transform-runtime": "^7.17.12",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-typescript": "^7.16.7",
-    "@babel/runtime": "^7.17.8",
-    "@mdx-js/react": "^2.1.1",
-    "@storybook/addon-actions": "6.4.19",
-    "@storybook/addon-docs": "6.4.19",
-    "@storybook/addon-essentials": "6.4.19",
-    "@storybook/addon-links": "^6.4.19",
-    "@storybook/builder-webpack5": "^6.4.19",
-    "@storybook/html": "^6.4.19",
-    "@storybook/manager-webpack5": "^6.4.19",
+    "@babel/runtime": "^7.17.9",
+    "@mdx-js/react": "^2.1.3",
+    "@storybook/addon-actions": "6.4.22",
+    "@storybook/addon-docs": "6.4.22",
+    "@storybook/addon-essentials": "6.4.22",
+    "@storybook/addon-links": "^6.4.22",
+    "@storybook/builder-webpack5": "^6.4.22",
+    "@storybook/html": "^6.4.22",
+    "@storybook/manager-webpack5": "^6.4.22",
     "@testing-library/dom": "^8.12.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.4.1",
-    "@types/jsdom": "^16.2.14",
-    "@types/node": "^17.0.23",
-    "@types/react": "^17.0.43",
+    "@types/jsdom": "^16.2.15",
+    "@types/node": "^17.0.45",
+    "@types/react": "^17.0.48",
     "@typescript-eslint/eslint-plugin": "^5.17.0",
     "@typescript-eslint/parser": "^5.17.0",
-    "babel-loader": "^8.2.4",
+    "babel-loader": "^8.2.5",
     "eslint": "^8.12.0",
-    "eslint-config-standard": "^17.0.0-1",
-    "eslint-import-resolver-typescript": "^2.7.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-import-resolver-typescript": "^2.7.1",
     "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-jest": "^26.1.3",
+    "eslint-plugin-jest": "^26.1.5",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^6.0.0",
     "html-webpack-plugin": "^5.5.0",
     "husky": "^7.0.4",
     "jest": "^27.5.1",
     "jsdom": "^19.0.0",
-    "lint-staged": "^12.3.7",
-    "nock": "^13.2.4",
+    "lint-staged": "^12.3.8",
+    "nock": "^13.2.9",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-is": "^17.0.2",
     "test-usehooks-ts": "^3.0.0-beta",
-    "ts-jest": "^27.1.4",
-    "typedoc": "^0.22.13",
-    "typescript": "^4.6.3",
+    "ts-jest": "^27.1.5",
+    "typedoc": "^0.22.18",
+    "typescript": "^4.6.4",
     "webpack": "^5.70.0",
     "webpack-cli": "^4.9.2"
   },
