--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "solid-ui",
-  "version": "2.4.22",
+  "version": "2.4.23",
   "description": "UI library for writing Solid read-write-web applications",
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
@@ -61,9 +61,9 @@
     "jss-preset-default": "^10.9.2",
     "mime-types": "^2.1.35",
     "npm": "^8.18.0",
-    "pane-registry": "^2.4.10-e0d1abde",
-    "rdflib": "^2.2.19",
-    "solid-logic": "^1.3.17-af110ecf",
+    "pane-registry": "^2.4.12",
+    "rdflib": "^2.2.20",
+    "solid-logic": "^2.0.0",
     "solid-namespace": "^0.5.2",
     "uuid": "^8.3.2"
   },
@@ -91,16 +91,16 @@
     "@types/jsdom": "^16.2.15",
     "@types/node": "^17.0.45",
     "@types/react": "^17.0.48",
-    "@typescript-eslint/eslint-plugin": "^5.34.0",
-    "@typescript-eslint/parser": "^5.34.0",
+    "@typescript-eslint/eslint-plugin": "^5.35.1",
+    "@typescript-eslint/parser": "^5.35.1",
     "babel-loader": "^8.2.5",
-    "eslint": "^8.22.0",
+    "eslint": "^8.23.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-import-resolver-typescript": "^2.7.1",
     "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jest": "^26.8.7",
+    "eslint-plugin-jest": "^26.9.0",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-promise": "^6.0.1",
     "html-webpack-plugin": "^5.5.0",
     "husky": "^7.0.4",
     "jest": "^27.5.1",
@@ -112,8 +112,8 @@
     "react-is": "^17.0.2",
     "test-usehooks-ts": "^3.0.0-beta",
     "ts-jest": "^27.1.5",
-    "typedoc": "^0.23.10",
-    "typescript": "^4.7.4",
+    "typedoc": "^0.23.11",
+    "typescript": "^4.8.2",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
   },
