--- a/package.json
+++ b/package.json
@@ -116,6 +116,9 @@
     "webpack": "^5.75.0",
     "webpack-cli": "^4.10.0"
   },
+  "optionalDependencies": {
+    "fsevents": "*"
+  },
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged",
