--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "coverage": "jest --coverage --collectCoverageFrom=src/**/*.[jt]s",
     "lint": "eslint \"src/**/*.js\" \"src/**/*.ts\" \"test/**/*.ts\"",
     "lint-fix": "eslint \"src/**/*.js\" \"src/**/*.ts\" \"test/**/*.ts\" --fix",
-    "jest": "jest",
+    "jest": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
     "test:debug": "node --inspect-brk ./node_modules/jest/bin/jest.js --runInBand --watch",
     "test": "npm run build-version && npm run lint && npm run jest",
     "doc": "typedoc --out ./Documentation/api/ ./src/ --excludeInternal",
@@ -55,49 +55,49 @@
   "homepage": "https://github.com/solidos/solid-ui",
   "dependencies": {
     "escape-html": "^1.0.3",
-    "eslint-plugin-n": "^15.5.1",
+    "eslint-plugin-n": "^15.6.1",
     "i": "^0.3.7",
     "jss": "^10.9.2",
     "jss-preset-default": "^10.9.2",
     "mime-types": "^2.1.35",
     "npm": "^8.19.3",
-    "pane-registry": "^2.4.13",
-    "rdflib": "^2.2.21",
-    "solid-logic": "^2.0.1",
+    "pane-registry": "^2.4.17",
+    "rdflib": "^2.2.24",
+    "solid-logic": "^2.1.1",
     "solid-namespace": "^0.5.2",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "@babel/cli": "^7.19.3",
-    "@babel/core": "^7.20.2",
+    "@babel/cli": "^7.20.7",
+    "@babel/core": "^7.20.12",
     "@babel/plugin-proposal-class-properties": "^7.18.6",
-    "@babel/plugin-proposal-optional-chaining": "^7.18.9",
-    "@babel/plugin-transform-async-to-generator": "^7.18.6",
+    "@babel/plugin-proposal-optional-chaining": "^7.20.7",
+    "@babel/plugin-transform-async-to-generator": "^7.20.7",
     "@babel/plugin-transform-runtime": "^7.19.6",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-typescript": "^7.18.6",
-    "@babel/runtime": "^7.20.1",
-    "@mdx-js/react": "^2.1.5",
-    "@storybook/addon-actions": "6.5.13",
-    "@storybook/addon-docs": "6.5.13",
-    "@storybook/addon-essentials": "6.5.13",
-    "@storybook/addon-links": "^6.5.13",
-    "@storybook/builder-webpack5": "^6.5.13",
-    "@storybook/html": "^6.5.13",
-    "@storybook/manager-webpack5": "^6.5.13",
-    "@testing-library/dom": "^8.19.0",
+    "@babel/runtime": "^7.20.13",
+    "@mdx-js/react": "^2.2.1",
+    "@storybook/addon-actions": "6.5.16",
+    "@storybook/addon-docs": "6.5.16",
+    "@storybook/addon-essentials": "6.5.16",
+    "@storybook/addon-links": "^6.5.16",
+    "@storybook/builder-webpack5": "^6.5.16",
+    "@storybook/html": "^6.5.16",
+    "@storybook/manager-webpack5": "^6.5.16",
+    "@testing-library/dom": "^8.20.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/jsdom": "^16.2.15",
     "@types/node": "^18.11.18",
-    "@types/react": "^17.0.52",
-    "@typescript-eslint/eslint-plugin": "^5.43.0",
-    "@typescript-eslint/parser": "^5.43.0",
+    "@types/react": "^17.0.53",
+    "@typescript-eslint/eslint-plugin": "^5.49.0",
+    "@typescript-eslint/parser": "^5.49.0",
     "babel-loader": "^8.3.0",
-    "eslint": "^8.27.0",
+    "eslint": "^8.33.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-import-resolver-typescript": "^2.7.1",
-    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jest": "^26.9.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^6.1.1",
@@ -106,13 +106,13 @@
     "jest": "^27.5.1",
     "jsdom": "^19.0.0",
     "lint-staged": "^12.5.0",
-    "nock": "^13.2.9",
+    "nock": "^13.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-is": "^17.0.2",
     "ts-jest": "^27.1.5",
     "typedoc": "^0.23.24",
-    "typescript": "^4.8.2",
+    "typescript": "^4.9.4",
     "webpack": "^5.75.0",
     "webpack-cli": "^4.10.0"
   },
