--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "coverage": "jest --coverage --collectCoverageFrom=src/**/*.[jt]s",
     "lint": "eslint \"src/**/*.js\" \"src/**/*.ts\" \"test/**/*.ts\"",
     "lint-fix": "eslint \"src/**/*.js\" \"src/**/*.ts\" \"test/**/*.ts\" --fix",
-    "jest": "node --experimental-vm-modules node_modules/jest/bin/jest.js --maxWorkers=50%",
+    "jest": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
     "test:debug": "node --inspect-brk ./node_modules/jest/bin/jest.js --runInBand --watch",
-    "test": "npm run build-version && npm run lint && npm run jest -- test/unit/*/* && npm run jest -- test/unit/*.ts",
+    "test": "npm run build-version && npm run lint && npm run jest --  --maxWorkers=50% test/unit/*/* && npm run jest --  --maxWorkers=50% test/unit/*.ts",
     "doc": "typedoc --out ./Documentation/api/ ./src/ --excludeInternal",
     "prepublishOnly": "npm test && npm run build && npm run doc",
     "postpublish": "git push origin main --follow-tags",
