--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,67 +26,4 @@ jobs:
       - uses: SimenB/github-actions-cpu-cores@v1
         id: cpu-cores
       - run: npm ci
-      - run: npm run test -- test/unit/table.test.ts # -- --max-workers ${{ steps.cpu-cores.outputs.count }}
-      - run: npm run doc
-      - run: npm run build
-      - name: Save build
-        if: matrix.node-version == '16.x'
-        uses: actions/upload-artifact@v2
-        with:
-          name: build
-          path: |
-            .
-            !node_modules
-          retention-days: 1
-
-  gh-pages:
-    needs: build
-    runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main'
-    steps:
-      - uses: actions/download-artifact@v2
-        with:
-          name: build
-      - run: rm .gitignore
-      - uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: .
-
-  npm-publish-build:
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/download-artifact@v2
-        with:
-          name: build
-      - uses: actions/setup-node@v1
-        with:
-          node-version: 16.x
-      - uses: rlespinasse/github-slug-action@v3.x
-      - name: Append commit hash to package version
-        run: 'sed -i -E "s/(\"version\": *\"[^\"]+)/\1-${GITHUB_SHA_SHORT}/" package.json'
-      - name: Disable pre- and post-publish actions
-        run: 'sed -i -E "s/\"((pre|post)publish)/\"ignore:\1/" package.json'
-      - uses: JS-DevTools/npm-publish@v1
-        with:
-          token: ${{ secrets.NPM_TOKEN }}
-          tag: ${{ env.GITHUB_REF_SLUG }}
-  
-  npm-publish-latest:
-    needs: build
-    runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main'
-    steps:
-      - uses: actions/download-artifact@v2
-        with:
-          name: build
-      - uses: actions/setup-node@v1
-        with:
-          node-version: 16.x
-      - name: Disable pre- and post-publish actions
-        run: 'sed -i -E "s/\"((pre|post)publish)/\"ignore:\1/" package.json'
-      - uses: JS-DevTools/npm-publish@v1
-        with:
-          token: ${{ secrets.NPM_TOKEN }}
-          tag: latest
+      - run: npm run test -- test/unit/t*.test.ts # -- --max-workers ${{ steps.cpu-cores.outputs.count }}
