--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,4 +26,4 @@ jobs:
       - uses: SimenB/github-actions-cpu-cores@v1
         id: cpu-cores
       - run: npm ci
-      - run: npm run test -- test/unit/[pst]*.test.ts # -- --max-workers ${{ steps.cpu-cores.outputs.count }}
+      - run: npm run test -- test/unit/[cfilm]*.test.ts # -- --max-workers ${{ steps.cpu-cores.outputs.count }}
